# esp32c6-hal-embassy-blink

./: Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
src/: main.rs
