[package]
name = "esp32c6-hal-embassy-blink"
version = "0.1.0"
authors = ["Simonas Narbutas <simonas@narbuto.lt>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal-common = { version = "0.13.1", features = ["esp32c6"] }
esp32c6-hal = { version = "0.6.0", features = ["embassy", "async", "embassy-time-timg0"] }
embassy-time = { version = "0.1.5", features = ["nightly"] }
embassy-executor   = { version = "0.3.2", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
esp-backtrace      = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println        = { version = "0.7.0", features = ["esp32c6"] }
static_cell        = { version = "2.0.0", features = ["nightly"] }
